	  include a newline within the output string
	* codegen.c (codegen), tree.h, cobc.c: adjust function to get generated
	  sourcefile name, keep static reference to it in "output_name"
	* flag.def, cobc.c: added flags for adjusted C source generation
	  -fgen-c-line-directives and -fgen-c-labels
	* codegen.c (output_cobol_info, output_c_info): added

2019-09-23  Simon Sobisch <simonsobisch@gnu.org>

	* codegen.c: moved alignment defines from libcob/common.h here
	* cobc.h: moved alignment exception for hpux from libcob/common.h here
	* codeoptim.c, cobc.h: generate the actual requested code w/o the attribute
	  __unaligned instead of overriding the attribute in the header
	* tree.h: removed duplicate redefinition of atol/atoll

2019-09-15  Ron Norman <rjn@inglenet.com>

	* cobc.h: For HPUX set COB_ALLOW_UNALIGNED as undefined
	* typeck.c: Emit ADD/SUBTRACT shortcut for COMP-5 only 
	            if COB_ALLOW_UNALIGNED defined
	* tree.h: Revert 'lock_mode' back to an 'int'
	* codegen.c: Changes for 'lock_mode' being an 'int'
	* cobc.h: Add COB_MEM_SIZE as size of cob_mem_struct rounded up to
	          multiple of sizeof(long long)
	* cobc.c: Use COB_MEM_SIZE as size of cob_mem_struct
	          To avoid aborts on system that requires aligned data

2019-09-12  Simon Sobisch <simonsobisch@gnu.org>

	* scanner.l, parser.y: allow LENGTH *OF* to remove the ambiguity for
	  REPOSITORY. FUNCTION LENGTH INTRINSIC. and register LENGTH OF

2019-09-09  Ron Norman <rjn@inglenet.com>

	* cobc.h: Add defines for COB_ALIGN_8 to set 8 byte boundary alignment

2019-09-03  Ron Norman <rjn@inglenet.com>

	* tree.h: Add checks for C compiler presence of __FUNCTION__
	* typeck.c: Fix some #if to include missing conditions

2019-08-25  Simon Sobisch <simonsobisch@gnu.org>

	* common.h: allow to force aligned pointer access by external
	  define of COB_NON_ALIGNED

2019-08-17  Simon Sobisch <simonsobisch@gnu.org>

	* typeck.c (cb_encode_program_id), parser.y, codegen.c, cobc.c: changed